# Fray

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  FINAL_STATISTICS.md  GITHUB_FEATURE_ANNOUNCEMENT.md  GITHUB_UPLOAD_GUIDE.md  OWASP_API_SECURITY_COVERAGE.md  OWASP_LLM_TOP10_COVERAGE.md  POC_SIMULATION_GUIDE.md  QUICKSTART.md  README-preview.html  README.ja.md  README.md  SHARE_WITH_TEAM.md  SKILL.md  SKILLS.md  VALUE_PROPOSITION.md  VENDOR_CUSTOMER_ANALYSIS.md  WAF_DETECTION_GUIDE.md  action.yml  easy_payload_creator.py  example.com_report.json  llms-install.md  pyproject.toml  rakuten.co.jp_report.json  requirements.txt  server.json  skillsllm.json  softbank_v11_full.html  vendor_customer_results.json  vendor_customer_targets.txt  waf_detector.py
.github/: AI_PR_REVIEW_SETUP.md  README.md  banner.html  coderabbit.yml
.github/workflows/: cve-monitor.yml  example-fray-test.yml  fray-security-scan.yml  smoke-test.yml  snyk-security.yml  tests.yml  validate.yml
docs/: CLI_REFERENCE.md  cli_reference.html  mcp-marketplace-submissions.md  roadmap-full.md  roadmap.md
fray/: __init__.py  _report_builder.py  _report_css.py  adaptive_cache.py  agent.py  ask.py  async_engine.py  auth.py  batch.py  bounty.py  browser.py  bypass.py  challenge_solver.py  checkpoint.py  cli.py  cloud_sync.py  cmdi.py  company_report.py  compare.py  completions.py  config.py  crawler.py  cve_payload.py  dashboard.py  deser.py  detector.py  diff.py  differ.py  doctor.py  evolve.py  fuzzer.py  graph.py  headless.py  impersonate.py  interactive.py  interop.py  leak.py  mcp_server.py  multiproto.py  mutator.py  (+33 more)
fray/payloads/prototype_pollution/: json_body.json  query_string.json
fray/recon/: __init__.py  checks.py  dns.py  fingerprint.py  http.py  pipeline.py  supply_chain.py
fray/templates/examples/: reflected-xss.yaml  sqli-error-based.yaml
homebrew/: README.md  setup-tap.sh
homebrew/.github/workflows/: update-formula.yml
homebrew/Formula/: fray.rb
payloads/http2/: h2_attacks.json
payloads/modern_bypasses/: 2025_2026_techniques.json
payloads/prototype_pollution/: json_body.json  query_string.json
payloads/wordpress/: CVE-2026-28515.txt  CVE-2026-28516.txt  CVE-2026-28517.txt  README.md
payloads/xss/: cve_2025_real_world.json
scripts/: enrich_cves.py  generate_variations.py
securityforge/: __main__.py  cli.py
templates/business-logic/: coupon-reuse.yaml  idor-direct-reference.yaml  price-manipulation.yaml  privilege-escalation.yaml  rate-limit-bypass.yaml  workflow-skip.yaml
tests/: test_adaptive_cache.py  test_evolve.py  test_feature_modules.py  test_mcp_tools.py  test_new_modules.py  test_package.py  test_qa_targets.py  test_submit.py  test_tester.py
vscode-fray/: LICENSE  README.md  package-lock.json  package.json
vscode-fray/src/: extension.ts
