[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fray"
version = "3.4.0"
description = "Open-source WAF Security Testing Platform — 5,600+ attack payloads, 150+ WAF fingerprints, AI-powered bypass engine, recon pipeline, beautiful CLI output"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "DALI Security", email = "soc@dalisec.io"}
]
keywords = [
    "security", "waf", "penetration-testing", "owasp", "xss", "sqli",
    "web-security", "payload", "firewall", "cybersecurity", "offensive-security",
    "vulnerability", "waf-bypass", "fray", "bug-bounty", "reconnaissance",
    "attack-surface", "nuclei", "scanner", "appsec", "devsecops",
    "cloudflare", "akamai", "imperva", "red-team", "infosec"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing",
    "Environment :: Console",
    "Framework :: Pytest",
    "Typing :: Typed",
]

dependencies = ["rich>=13.0"]

[project.optional-dependencies]
mcp = ["mcp[cli]>=1.2.0"]
browser = ["playwright>=1.40"]
ai = ["openai>=1.0", "anthropic>=0.20"]
full = ["playwright>=1.40", "openai>=1.0", "anthropic>=0.20", "mcp[cli]>=1.2.0"]

[project.urls]
Homepage = "https://github.com/dalisecurity/fray"
Documentation = "https://github.com/dalisecurity/fray/tree/hugo/docs"
Repository = "https://github.com/dalisecurity/fray"
Issues = "https://github.com/dalisecurity/fray/issues"
Changelog = "https://github.com/dalisecurity/fray/blob/hugo/CHANGELOG.md"
Blog = "https://dalisec.io/research/blog-fray-launch.html"
Funding = "https://github.com/sponsors/dalisecurity"

[project.scripts]
fray = "fray.cli:main"

[tool.setuptools.packages.find]
include = ["fray*"]

[tool.setuptools.package-data]
fray = ["payloads/**/*.json", "payloads/**/*.txt", "payloads/**/*.md", "data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
